@startuml

class MainController {
- colorScheme: ColorScheme
- paintBoard()
+ setColorScheme(ColorScheme)
}

note left of MainController::paintBoard
get color from colorScheme.render(pieceType)
specific to a pieceType
end note

note right of MainController::setColorScheme
Client can change colorscheme
by calling setColorScheme()
end note

interface ColorScheme {
+ render(PieceType): Color
}

class ClassicColorScheme {
+ render(PieceType): Color
}

class HighContrastColor {
+ render(PieceType): Color
}

class SplatoonColor {
+ render(PieceType): Color
}

MainController o--> ColorScheme
ColorScheme <|.. ClassicColorScheme
ColorScheme <|.. HighContrastColor
ColorScheme <|.. SplatoonColor

@enduml
